[tool.poetry]
name = "spark-unit-testing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.1"
pyspark = "^3.1.2"
findspark = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
